// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search results form no results should render correctly with no user and no results 1`] = `
<div>
  <div
    className="sc-dQppl bRKjeo"
  >
    <div
      className="sc-bqyKva fxZGmk"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-pFZIQ gVJURd"
          htmlFor="user"
        >
          <span
            className="sc-jrAGrp kYeQkM"
          >
            Username or email address
          </span>
          <input
            className="sc-crrsfI gxaTrt"
            defaultValue=""
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-gKsewC hcOgYF"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Auth search results form some results should render correctly with user and results 1`] = `
<div>
  <div
    className="sc-dQppl bRKjeo"
  >
    <div
      className="sc-bqyKva fxZGmk"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-pFZIQ gVJURd"
          htmlFor="user"
        >
          <span
            className="sc-jrAGrp kYeQkM"
          >
            Username or email address
          </span>
          <input
            className="sc-crrsfI gxaTrt"
            defaultValue="someuser"
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-gKsewC hcOgYF"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <table
    className="sc-jSgupP eofvCY"
  >
    <tbody
      className="sc-gsTCUz"
    >
      <tr
        className="sc-eCssSg"
      >
        <th
          className="sc-hKgILt jPnCCV"
        >
          Name
        </th>
        <th
          className="sc-hKgILt jPnCCV"
        >
          Username
        </th>
        <th
          className="sc-hKgILt jPnCCV"
        >
          Email
        </th>
        <th
          className="sc-hKgILt jPnCCV"
        >
          Locked
        </th>
        <th
          className="sc-hKgILt jPnCCV"
        >
          Enabled
        </th>
        <th
          className="sc-hKgILt jPnCCV"
        >
           
        </th>
      </tr>
      <tr
        className="sc-eCssSg"
      >
        <td
          className="sc-hKgILt ispPLd"
        >
          Auth
           
          Adm
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          AUTH_ADM
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          Yes
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          No
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          <a
            className="sc-fubCfw jyHaCq sc-gKsewC kGNoax"
            disabled={false}
            href="/manage-external-users/AUTH_ADM"
            id="edit-button-AUTH_ADM"
            muted={false}
            value={0}
          >
            Edit
          </a>
        </td>
      </tr>
      <tr
        className="sc-eCssSg"
      >
        <td
          className="sc-hKgILt ispPLd"
        >
          Auth
           
          Expired
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          AUTH_EXPIRED
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          No
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          Yes
        </td>
        <td
          className="sc-hKgILt ispPLd"
        >
          <a
            className="sc-fubCfw jyHaCq sc-gKsewC kGNoax"
            disabled={false}
            href="/manage-external-users/AUTH_EXPIRED"
            id="edit-button-AUTH_EXPIRED"
            muted={false}
            value={1}
          >
            Edit
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
